Makes spacing consistent. Fixes disappearing photo problem. Optimizes randomNumber().

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -20,7 +20,7 @@
 
 .img{
   width: 75%;
-  height: auto;
+  min-height: 50%;
   object-fit: cover;
 }
 
